--- a/test.html
+++ b/test.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
   </head>
   <body>
+    <h1>hello, kakoiii</h1>
+    <h2>gg</h2>
     <p>這是我的第一個 GitHub Pages 網站 🎉</p>
   </body>
 </html>
